# AmesFormer

./: .gitignore  LICENSE  README.md  default_hparams.toml  default_tuning_hparams.toml  pyproject.toml
data/raw/: Combined.xlsx
data_cleaning/: Combined_2s_as_0s_publication.csv  combined_dataset_analysis.py  combined_dataset_constructor.py  ensure_testset_correct.py  exploratory_da.py  isssty_mol_fixer.py
gnn-tools/: .gitignore  Cargo.toml  gnn_tools.pyi  pyproject.toml
gnn-tools/src/: lib.rs
gnn-tools/test/: test_shortest_paths.py
graphormer/: cli.py  functional.py  inference.py  model_analysis.py  optimise_temperature.py  results.py  schedulers.py  train.py  utils.py
graphormer/config/: data.py  hparams.py  logging.py  loss.py  model.py  optimizer.py  options.py  scheduler.py  tuning_hparams.py  utils.py
graphormer/data/: data_cleaning.py  dataloader.py
graphormer/data/datasets/: __init__.py  combined.py  graphormer_dataset.py  hansen.py  honma.py  ogb.py  tox24.py
graphormer/modules/: model.py  model_data.py
graphormer/modules/attention/: __init__.py  fish.py  linear.py  mask.py  mha.py  prior.py
graphormer/modules/embedding/: __init__.py  edge_embedding.py  node_embedding.py
graphormer/modules/encoding/: __init__.py  centrality_encoding.py  edge_encoding.py  spatial_encoding.py
graphormer/modules/layers/: __init__.py  ffn.py  output.py
graphormer/modules/norm/: __init__.py  crms.py  identity.py  layer.py  max.py  rms.py
graphormer/modules/residuals/: __init__.py  pre_norm.py  rezero.py
pretrained_models/: AmesFormer-Honma.pt  AmesFormer-Pro.pt
tests/modules/attention/: test_fish.py  test_mha.py
tests/modules/encoding/: test_centrality_encoding.py  test_edge_encoding.py  test_spatial_encoding.py
tests/modules/norm/: test_max_norm.py
