[package]
name = "gnn-tools"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gnn_tools"
crate-type = ["cdylib"]

[dependencies]
petgraph = "^0.6.4"
pyo3 = { version = "^0.21.1", features = ["extension-module"] }
